--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,132 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="{{ asset('assets/img/favicon.ico') }}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+    <title>{% block title %}
+            Shout!
+        {% endblock %}
+    </title>
+
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
+
+    <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/css/paper-kit.css') }}" rel="stylesheet"/>
+    {#<link href="{{ asset('assets/css/demo.css') }}" rel="stylesheet" />#}
+
+    <!--     Fonts and icons     -->
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
+    {#<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">#}
+    <link href="{{ asset('assets/css/nucleo-icons.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/css/font-awesome.min.css') }}" rel="stylesheet" />
+
+</head>
+<body>
+
+{#<!--    navbar come here          -->#}
+<nav class="navbar navbar-toggleable-md fixed-top bg-danger">
+    <div class="container">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-danger" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-bar"></span>
+            <span class="navbar-toggler-bar"></span>
+            <span class="navbar-toggler-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{{ path('shout_list') }}">Shout!</a>
+        <div class="collapse navbar-collapse" id="navbar-danger">
+            <div class="col-md-8">
+                <form class="mt-3" action="" method="post" role="form">
+                    <div class="input-group">
+                        <input type="text" class="form-control bg-danger" name="search" placeholder="Search Shoutee" style="border-color: white; color: white">
+                        <button type="submit" class="input-group-addon bg-danger text-white" style="border-color: white">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <ul class="navbar-nav ml-auto">
+                {#<li class="nav-item">#}
+
+                {#</li>#}
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa fa-bullhorn"></i> My Shouts</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-notification" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-bell"></i><span class="notification">99</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-right dropdown-danger">
+                        {#<div class="text-center p-3"><i class="fa fa-spinner fa-spin"></i></div>#}
+                        <li class="dropdown-header">Notifications</li>
+                        <li class="dropdown-item"><a href="#pk"><span class="text-info">Mark</span> shouts your problem "Ang sakit talaga kapag..".</a></li>
+                        <li class="dropdown-item"><a href="#pk"><span class="text-info">Chistian</span> adviced on your shout "Ang sakit talaga kapag..".</a></li>
+                        {#<li class="dropdown-item"><a href="#pk"><span class="text-info">Jen</span> followed you.</a></li>#}
+                        <li class="dropdown-item"><a href="#pk"><span class="text-info">mhackyu</span> loved your shout "Ang sakit talaga kapag..".</a></li>
+                        <div class="dropdown-divider"></div>
+                        <li class="dropdown-item">
+                                <a class="text-center ml-4" href="#pk">Show All Notifications<i class="fa fa-angle-right"></i>
+                                </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mark Christian</a>
+                    <ul class="dropdown-menu dropdown-menu-right dropdown-danger">
+                        <li class="dropdown-header">Account</li>
+                        <li class="dropdown-item"><a href="#pk"><i class="fa fa-user"></i> Profile</a></li>
+                        <li class="dropdown-item"><a href="#pk"><i class="fa fa-cog"></i> Settings</a></li>
+                        {#<li class="dropdown-item"><a href="#pk">Change Password</a></li>#}
+                        {#<div class="dropdown-divider"></div>#}
+                        {#<li class="dropdown-item"><a href="#pk"></a></li>#}
+                        <div class="dropdown-divider"></div>
+                        <li class="dropdown-item"><a href="#pk"><i class="fa fa-sign-out"></i> Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+{#<!-- end navbar  -->#}
+
+
+<div class="wrapper">
+
+    {# CONTENT #}
+    <div class="container-fluid" style="margin-top: 60px">
+        {% block content %}{% endblock %}
+    </div>
+
+
+</div>
+
+{#< MODAL #}
+{% block modal %}{% endblock %}
+
+
+</body>
+<!-- Core JS Files -->
+<script src="{{ asset('assets/js/jquery-3.2.1.js') }}" type="text/javascript"></script>
+<script src="{{ asset('assets/js/jquery-ui-1.12.1.custom.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('assets/js/tether.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('assets/js/bootstrap.min.js') }}" type="text/javascript"></script>
+
+<!-- Plugin for Share buttons -->
+{#<script src="{{ asset('assets/js/jquery.sharrre.js') }}"></script>#}
+
+<!-- Switches -->
+<script src="{{ asset('assets/js/bootstrap-switch.min.js') }}"></script>
+
+<!--  Plugins for Slider -->
+<script src="{{ asset('assets/js/nouislider.js') }}"></script>
+
+<!--  Plugins for DateTimePicker -->
+<script src="{{ asset('assets/js/moment.min.js') }}"></script>
+<script src="{{ asset('assets/js/bootstrap-datetimepicker.min.js') }}"></script>
+
+<!--  Paper Kit Initialization snd functons -->
+<script src="{{ asset('assets/js/paper-kit.js?v=2.0.0') }}"></script>
 </html>
