--- a/app/Resources/views/layouts/signin_signup_base.html.twig
+++ b/app/Resources/views/layouts/signin_signup_base.html.twig
@@ -15,6 +15,7 @@
 
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" />
     <link href="{{ asset('assets/css/paper-kit.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/animate.css') }}" rel="stylesheet"/>
     {#<link href="{{ asset('assets/css/demo.css') }}" rel="stylesheet" />#}
 
     <!--     Fonts and icons     -->
@@ -26,39 +27,41 @@
 </head>
 <body>
 
+    <div class="wrapper">
+        {# CONTENT #}
+        {% block content %}{% endblock %}
+    </div>
 
-<div class="wrapper">
+    {# MODAL #}
+    {% block modal %}{% endblock %}
 
-    {# CONTENT #}
-    {% block content %}{% endblock %}
+    {#<!-- Core JS Files -->#}
+    <script src="{{ asset('assets/js/jquery-3.2.1.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/jquery-ui-1.12.1.custom.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/tether.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/bootstrap.min.js') }}" type="text/javascript"></script>
 
+    {#<!-- Plugin for Share buttons -->#}
+    {#<script src="{{ asset('assets/js/jquery.sharrre.js') }}"></script>#}
 
-</div>
+    {#<!-- Switches -->#}
+    <script src="{{ asset('assets/js/bootstrap-switch.min.js') }}"></script>
 
-{#< MODAL #}
-{% block modal %}{% endblock %}
+    {#<!--  Plugins for Slider -->#}
+    <script src="{{ asset('assets/js/nouislider.js') }}"></script>
 
+    {#<!--  Plugins for DateTimePicker -->#}
+    <script src="{{ asset('assets/js/moment.min.js') }}"></script>
+    <script src="{{ asset('assets/js/bootstrap-datetimepicker.min.js') }}"></script>
+
+    {#<!--  Paper Kit Initialization snd functons -->#}
+    {#<script src="{{ asset('assets/js/paper-kit.js?v=2.0.0') }}"></script>#}
+    <script src="{{ asset('assets/js/paper-kit.js') }}"></script>
+    {# APP MAIN JS #}
+    <script src="{{ asset('assets/js/app.js') }}"></script>
+
+    {# JAVASCRIPTS #}
+    {% block js %}{% endblock %}
 
 </body>
-<!-- Core JS Files -->
-<script src="{{ asset('assets/js/jquery-3.2.1.js') }}" type="text/javascript"></script>
-<script src="{{ asset('assets/js/jquery-ui-1.12.1.custom.min.js') }}" type="text/javascript"></script>
-<script src="{{ asset('assets/js/tether.min.js') }}" type="text/javascript"></script>
-<script src="{{ asset('assets/js/bootstrap.min.js') }}" type="text/javascript"></script>
-
-<!-- Plugin for Share buttons -->
-{#<script src="{{ asset('assets/js/jquery.sharrre.js') }}"></script>#}
-
-<!-- Switches -->
-<script src="{{ asset('assets/js/bootstrap-switch.min.js') }}"></script>
-
-<!--  Plugins for Slider -->
-<script src="{{ asset('assets/js/nouislider.js') }}"></script>
-
-<!--  Plugins for DateTimePicker -->
-<script src="{{ asset('assets/js/moment.min.js') }}"></script>
-<script src="{{ asset('assets/js/bootstrap-datetimepicker.min.js') }}"></script>
-
-<!--  Paper Kit Initialization snd functons -->
-<script src="{{ asset('assets/js/paper-kit.js?v=2.0.0') }}"></script>
 </html>
