--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -18,7 +18,18 @@
             <div class="filter"></div>
             <div class="container">
                 <div class="row">
+                    {#<div class="col-lg-8 col-md-6 col-sm-6">#}
+                        {#<div class="typography-line" style="margin-top: 250px">#}
+                            {#<span class="note">Quote</span>#}
+                            {#<blockquote class="blockquote">#}
+                                {#<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>#}
+                                {#<footer class="blockquote-footer">Someone famous in <cite title="source Title">Source Title</cite></footer>#}
+                            {#</blockquote>#}
+                        {#</div>#}
+                    {#</div>#}
                     <div class="col-lg-4 offset-lg-4 col-sm-6 offset-sm-3">
+                    {#<div class="col-lg-4 offset-lg-8 col-md-6 offset-md-6 col-sm-6 offset-sm-6">#}
+                    {#<div class="col-lg-4 col-md-6 col-sm-6">#}
                         <div class="card card-register">
                             <h3 class="title">Welcome</h3>
 
