--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
 
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" />
     <link href="{{ asset('assets/css/paper-kit.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/animate.css') }}" rel="stylesheet"/>
     {#<link href="{{ asset('assets/css/demo.css') }}" rel="stylesheet" />#}
 
     {#<!--     Fonts and icons     -->#}
