--- a/app/Resources/views/shout/new_shout_content.html.twig
+++ b/app/Resources/views/shout/new_shout_content.html.twig
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <form class="p-3" action="" method="post" role="form">
         <div class="panel-heading">
-            <h2 class="text-center">Shout your problem</h2>
+            <h2 class="text-center mb-3">Shout your problem</h2>
         </div>
 
         <div class="panel-body clearfix">
