--- a/app/Resources/views/shout/shout_feed_content.html.twig
+++ b/app/Resources/views/shout/shout_feed_content.html.twig
@@ -1,14 +1,30 @@
-<h4 class="mt-5">Shout Feed</h4>
+<h4 class="mt-5"><strong>Shout Feed</strong></h4>
 <hr>
 {% for shout in shouts %}
+    {% set slug = shout.slug %}
     <div class="mb-3"></div>
     <div class="card card-danger">
         <div class="card-header">
             {% set user = shout.user.username %}
             {% set bodyLength = shout.body|length %}
+            <div class="pull-right">
+                <div class="dropdown">
+                    <button class="btn btn-just-icon btn-outline-default btn-sm dropdown-toggle" id="dropdownMenu1"
+                            data-toggle="dropdown">
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-default" role="menu" aria-labelledby="dropdownMenu1">
+                        <li role="presentation" class="dropdown-header">Dropdown header</li>
+                        <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+                        <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                        <li class="dropdown-item" role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Something
+                                else here</a></li>
+                    </ul>
+                </div>
+            </div>
             <h3 class="card-title">{{ shout.title }} </h3>
             <p style="margin-top: -10px"> by
-                <img class="img-circle img-no-padding img-responsive" height="32px" width="32px" src="{{ asset('assets/img/antoine-barres.jpg') }}" alt="">
+                <img class="img-circle img-no-padding img-responsive" height="32px" width="32px" src="{{ asset('assets/img/faces/kaci-baum-2.jpg') }}" alt="">
                 <a href="{{ path('profile_show', {username: user}) }}">{{ user }}</a>
                 <i class="small">{{ shout.createdAt|date() }}</i>
             </p>
@@ -17,7 +33,7 @@
                     <h5><span class="label label-info"><i class="fa fa-bullhorn"></i>2.5k</span></h5>
                 </li>
                 <li class="list-inline-item">
-                    <h5><span class="label label-danger"><i class="fa fa-heart"></i><span id="love-count-{{ shout.slug }}">{{ shout|numOfLove() }}</span></span></h5>
+                    <h5><span class="label label-danger"><i class="fa fa-heart"></i><span id="love-count-{{ slug }}">{{ shout|numOfLove() }}</span></span></h5>
                 </li>
                 <li class="list-inline-item">
                     <h5><span class="label label-warning"><i class="fa fa-comment"></i>2.5k</span></h5>
@@ -41,7 +57,6 @@
                 {#{% else %}#}
                     {#btn-outline-danger {% set isLove = false %}#}
                 {#{% endif %} btn-sm btn-love" data-id="{{ shout.slug }}" data-is-love="{{ isLove }}"><i class="fa fa-heart"></i>Love</span>#}
-                {% set slug = shout.slug %}
                 {% if app.user|isLove(shout) %}
                     {#<span class="btn btn-primary btn-sm"><i class="fa fa-bullhorn"></i>Loud</span>#}
                     <span class="btn btn-danger btn-sm btn-love" data-id="{{ slug }}" data-is-love="true"><i class="fa fa-heart"></i>Love</span>
@@ -51,7 +66,7 @@
                 {% endif %}
             </div>
             <div class="pull-right">
-                <button class="btn btn-outline-primary btn-round" href="">Advice</button>
+                <a class="btn btn-outline-primary btn-round" href="{{ path('shout_show', {slug: slug}) }}">Advice</a>
             </div>
         </div>
     </div>
