reactions, advice and top shouts added

--- a/app/Resources/views/shout/list.html.twig
+++ b/app/Resources/views/shout/list.html.twig
@@ -3,16 +3,16 @@
 {% block content %}
     <div class="row">
 
-        <div class="col-md-3">
+        {#<div class="col-md-3">#}
 
-        </div>
+        {#</div>#}
 
-        <div class="col-md-6 bg-faded">
+        <div class="col-md-9 bg-faded">
             <div class="mb-3"></div>
             {# NEW SHOUT #}
             {% include 'shout/new_shout_content.html.twig' %}
 
-            {# SHOUT FEED #}
+            {# SHOUTS FEED #}
             {% include 'shout/shout_feed_content.html.twig' %}
         </div>
 
