--- a/app/Resources/views/shout/new.html.twig
+++ b/app/Resources/views/shout/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="row" style="margin-top: 100px">
-        <div class="col-md-6">
+        <div class="col-md-6 offset-3">
             <legend>New Shout</legend>
             {% form_theme form 'bootstrap_3_layout.html.twig' %}
             {{ form_start(form) }}
