--- a/app/Resources/views/shout/shout_feed_content.html.twig
+++ b/app/Resources/views/shout/shout_feed_content.html.twig
@@ -1,4 +1,4 @@
-<h4 class="mt-5"><strong>Shout Feed</strong></h4>
+<h4 class="mt-5"><strong>Shouts Feed</strong></h4>
 <hr>
 {% for shout in shouts %}
     {% set slug = shout.slug %}
@@ -22,21 +22,31 @@
                     </ul>
                 </div>
             </div>
-            <h3 class="card-title">{{ shout.title }} </h3>
+            <h3 class="card-title">"{{ shout.title }}"</h3>
             <p style="margin-top: -10px"> by
                 <img class="img-circle img-no-padding img-responsive" height="32px" width="32px" src="{{ asset('assets/img/faces/kaci-baum-2.jpg') }}" alt="">
                 <a href="{{ path('profile_show', {username: user}) }}">{{ user }}</a>
                 <i class="small">{{ shout.createdAt|date() }}</i>
             </p>
+            {#<div class="card-title h3">{{ shout.title }}#}
+                {#<p>#}
+                    {#by#}
+                    {#<img class="img-circle img-no-padding img-responsive" height="32px" width="32px" src="{{ asset('assets/img/faces/kaci-baum-2.jpg') }}" alt="">#}
+                    {#<a href="{{ path('profile_show', {username: user}) }}">{{ user }}</a>#}
+                    {#<i class="small">{{ shout.createdAt|date() }}</i>#}
+                {#</p>#}
+            {#</div>#}
+
             <ul class="list-inline">
                 <li class="list-inline-item">
-                    <h5><span class="label label-info"><i class="fa fa-bullhorn"></i>2.5k</span></h5>
+                    <h5><span class="label label-info"><i class="fa fa-bullhorn"></i><span id="loud-count-{{ slug }}"> {{ shout|numOfLoud() }}</span></span></h5>
+                    {#<h5><span class="label label-info"><i class="fa fa-bullhorn"></i>2.5k</span></h5>#}
                 </li>
                 <li class="list-inline-item">
-                    <h5><span class="label label-danger"><i class="fa fa-heart"></i><span id="love-count-{{ slug }}">{{ shout|numOfLove() }}</span></span></h5>
+                    <h5><span class="label label-danger"><i class="fa fa-heart"></i><span id="love-count-{{ slug }}"> {{ shout|numOfLove() }}</span></span></h5>
                 </li>
                 <li class="list-inline-item">
-                    <h5><span class="label label-warning"><i class="fa fa-comment"></i>2.5k</span></h5>
+                    <h5><span class="label label-warning"><i class="fa fa-comment"></i> {{ shout|numOfAdvice }}</span></h5>
                 </li>
             </ul>
         </div>
@@ -49,19 +59,16 @@
         </div>
         <div class="card-footer">
             <div class="pull-left">
-                {#<span class="btn {% if app.user|isLove(shout) %}btn-primary{% else %} btn-outline-primary {% endif %} btn-sm"><i class="fa fa-bullhorn"></i>Loud</span>#}
-                {#{% set isLove = false %}#}
-                {#<span class="btn#}
-                {#{% if app.user|isLove(shout) %}#}
-                    {#btn-danger {% set isLove = true %}#}
-                {#{% else %}#}
-                    {#btn-outline-danger {% set isLove = false %}#}
-                {#{% endif %} btn-sm btn-love" data-id="{{ shout.slug }}" data-is-love="{{ isLove }}"><i class="fa fa-heart"></i>Love</span>#}
+
+                {% if app.user|isLoud(shout) %}
+                    <span class="btn btn-primary btn-sm btn-loud" data-id="{{ slug }}" data-is-loud="true"><i class="fa fa-heart"></i>Loud</span>
+                {% else %}
+                    <span class="btn btn-outline-primary btn-sm btn-loud" data-id="{{ slug }}" data-is-loud="false"><i class="fa fa-bullhorn" title="loud this"></i> Loud</span>
+                {% endif %}
+
                 {% if app.user|isLove(shout) %}
-                    {#<span class="btn btn-primary btn-sm"><i class="fa fa-bullhorn"></i>Loud</span>#}
                     <span class="btn btn-danger btn-sm btn-love" data-id="{{ slug }}" data-is-love="true"><i class="fa fa-heart"></i>Love</span>
                 {% else %}
-                    {#<span class="btn btn-outline-primary btn-sm"><i class="fa fa-bullhorn"></i>Loud</span>#}
                     <span class="btn btn-outline-danger btn-sm btn-love" data-id="{{ slug }}" data-is-love="false"><i class="fa fa-heart" title="love this"></i> Love</span>
                 {% endif %}
             </div>
