--- a/app/Resources/views/profile/show.html.twig
+++ b/app/Resources/views/profile/show.html.twig
@@ -1,5 +1,100 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-    
+    <div class="wrapper">
+        {#<div class="page-header page-header-xs" data-parallax="true" style="background-image: url('{{ asset('assets/img/fabio-mangione.jpg') }}');">#}
+            {#<div class="filter"></div>#}
+        {#</div>#}
+        <div class="section profile-content" style="margin-top: 100px">
+            <div class="container">
+                <div class="owner">
+                    <div class="avatar">
+                        <img src="../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                    </div>
+                    <div class="name">
+                        <h4 class="title">{{ user.username }}<br/></h4>
+                        <h6 class="description">About</h6>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 text-center">
+                        {% if user.about is empty  %}
+                            <p>No Description.</p>
+                        {% else %}
+                            <p>{{ user.about }}</p>
+                        {% endif %}
+                        <br />
+                        <btn class="btn btn-outline-default btn-round"><i class="fa fa-flag"></i> Report</btn>
+                    </div>
+                </div>
+                <br/>
+                <div class="nav-tabs-navigation">
+                    <div class="nav-tabs-wrapper">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" data-toggle="tab" href="#follows" role="tab">Reviews</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#following" role="tab">Reports</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Tab panes -->
+                <div class="tab-content following">
+                    <div class="tab-pane active" id="follows" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-6 offset-md-3">
+                                <div class="text-center"><button class="btn btn-warning btn-round"><i
+                                                class="fa fa-plus"></i> Review</button></div>
+                                <ul class="list-unstyled follows">
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-md-2 offset-md-0">
+                                                <img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                                            </div>
+                                            <div class="col-md-7 col-xs-4">
+                                                <h6>Flume<br/><small>Masyadong siyang fogi</small></h6>
+                                            </div>
+                                            {#<div class="col-md-3 col-xs-2">#}
+                                                {#<div class="unfollow" >#}
+                                                    {#<div class="checkbox">#}
+                                                        {#<input id="checkbox1" type="checkbox" checked="">#}
+                                                        {#<label for="checkbox1"></label>#}
+                                                    {#</div>#}
+                                                {#</div>#}
+                                            {#</div>#}
+                                        </div>
+                                    </li>
+                                    <hr />
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-md-2 offset-md-0">
+                                                <img src="../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                                            </div>
+                                            <div class="col-md-7 col-xs-4">
+                                                <h6>Banks<br /><small>Paaweer!</small></h6>
+                                            </div>
+                                            {#<div class="col-md-3 col-xs-2">#}
+                                                {#<div class="unfollow" >#}
+                                                    {#<div class="checkbox">#}
+                                                        {#<input id="checkbox2" type="checkbox" checked="">#}
+                                                        {#<label for="checkbox2"></label>#}
+                                                    {#</div>#}
+                                                {#</div>#}
+                                            {#</div>#}
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane text-center" id="following" role="tabpanel">
+                        <h3 class="text-muted">Not following anyone yet :(</h3>
+                        <button class="btn btn-warning btn-round">Find artists</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
