--- a/app/Resources/views/shout/shout_feed_content.html.twig
+++ b/app/Resources/views/shout/shout_feed_content.html.twig
@@ -1,79 +1,68 @@
-<h4 class="mt-5"><strong>Shouts Feed</strong></h4>
-<hr>
 {% for shout in shouts %}
     {% set slug = shout.slug %}
-    <div class="mb-3"></div>
-    <div class="card card-danger">
-        <div class="card-header">
-            {% set user = shout.user.username %}
-            {% set bodyLength = shout.body|length %}
-            <div class="pull-right">
-                <div class="dropdown">
-                    <button class="btn btn-just-icon btn-outline-default btn-sm dropdown-toggle" id="dropdownMenu1"
-                            data-toggle="dropdown">
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu dropdown-default" role="menu" aria-labelledby="dropdownMenu1">
-                        <li role="presentation" class="dropdown-header">Dropdown header</li>
-                        <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-                        <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-                        <li class="dropdown-item" role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Something
-                                else here</a></li>
-                    </ul>
+    <div class="col-md-6">
+        <div class="card card-danger mb-3">
+            <div class="card-header">
+                {% set user = shout.user.username %}
+                {% set bodyLength = shout.body|length %}
+                <div class="pull-right">
+                    <div class="dropdown">
+                        <button class="btn btn-just-icon btn-outline-default btn-sm dropdown-toggle" id="dropdownMenu1"
+                                data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-default" role="menu" aria-labelledby="dropdownMenu1">
+                            <li role="presentation" class="dropdown-header">Dropdown header</li>
+                            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+                            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                            <li class="dropdown-item" role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Something
+                                    else here</a></li>
+                        </ul>
+                    </div>
                 </div>
+                <h3 class="card-title">"{{ shout.title }}"</h3>
+                <p style="margin-top: -10px"> by
+                    <img class="img-circle img-no-padding img-responsive" height="32px" width="32px" src="{{ asset('assets/img/faces/kaci-baum-2.jpg') }}" alt="">
+                    <a href="{{ path('profile_show', {username: user}) }}">{{ user }}</a>
+                    <i class="small">{{ shout.createdAt|date() }}</i>
+                </p>
+
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <h5><span class="label label-info"><i class="fa fa-bullhorn"></i><span id="loud-count-{{ slug }}"> {{ shout|numOfLoud() }}</span></span></h5>
+                    </li>
+                    <li class="list-inline-item">
+                        <h5><span class="label label-danger"><i class="fa fa-heart"></i><span id="love-count-{{ slug }}"> {{ shout|numOfLove() }}</span></span></h5>
+                    </li>
+                    <li class="list-inline-item">
+                        <h5><span class="label label-warning"><i class="fa fa-comment"></i> {{ shout|numOfAdvice }}</span></h5>
+                    </li>
+                </ul>
             </div>
-            <h3 class="card-title">"{{ shout.title }}"</h3>
-            <p style="margin-top: -10px"> by
-                <img class="img-circle img-no-padding img-responsive" height="32px" width="32px" src="{{ asset('assets/img/faces/kaci-baum-2.jpg') }}" alt="">
-                <a href="{{ path('profile_show', {username: user}) }}">{{ user }}</a>
-                <i class="small">{{ shout.createdAt|date() }}</i>
-            </p>
-            {#<div class="card-title h3">{{ shout.title }}#}
-                {#<p>#}
-                    {#by#}
-                    {#<img class="img-circle img-no-padding img-responsive" height="32px" width="32px" src="{{ asset('assets/img/faces/kaci-baum-2.jpg') }}" alt="">#}
-                    {#<a href="{{ path('profile_show', {username: user}) }}">{{ user }}</a>#}
-                    {#<i class="small">{{ shout.createdAt|date() }}</i>#}
-                {#</p>#}
-            {#</div>#}
-
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <h5><span class="label label-info"><i class="fa fa-bullhorn"></i><span id="loud-count-{{ slug }}"> {{ shout|numOfLoud() }}</span></span></h5>
-                    {#<h5><span class="label label-info"><i class="fa fa-bullhorn"></i>2.5k</span></h5>#}
-                </li>
-                <li class="list-inline-item">
-                    <h5><span class="label label-danger"><i class="fa fa-heart"></i><span id="love-count-{{ slug }}"> {{ shout|numOfLove() }}</span></span></h5>
-                </li>
-                <li class="list-inline-item">
-                    <h5><span class="label label-warning"><i class="fa fa-comment"></i> {{ shout|numOfAdvice }}</span></h5>
-                </li>
-            </ul>
-        </div>
-        <div class="card-block">
-            {% if bodyLength > 300 %}
-                {{ shout.body|slice(0,300) }}...
-            {% else %}
-                {{ shout.body }}
-            {% endif %}
-        </div>
-        <div class="card-footer">
-            <div class="pull-left">
-
-                {% if app.user|isLoud(shout) %}
-                    <span class="btn btn-primary btn-sm btn-loud" data-id="{{ slug }}" data-is-loud="true"><i class="fa fa-heart"></i>Loud</span>
+            <div class="card-block" style="height: 100px;">
+                {% if bodyLength > 220 %}
+                    {{ shout.body|slice(0,220) }}...<a href="{{ path('shout_show', {slug: slug}) }}">read more</a>
                 {% else %}
-                    <span class="btn btn-outline-primary btn-sm btn-loud" data-id="{{ slug }}" data-is-loud="false"><i class="fa fa-bullhorn" title="loud this"></i> Loud</span>
-                {% endif %}
-
-                {% if app.user|isLove(shout) %}
-                    <span class="btn btn-danger btn-sm btn-love" data-id="{{ slug }}" data-is-love="true"><i class="fa fa-heart"></i>Love</span>
-                {% else %}
-                    <span class="btn btn-outline-danger btn-sm btn-love" data-id="{{ slug }}" data-is-love="false"><i class="fa fa-heart" title="love this"></i> Love</span>
+                    {{ shout.body }}
                 {% endif %}
             </div>
-            <div class="pull-right">
-                <a class="btn btn-outline-primary btn-round" href="{{ path('shout_show', {slug: slug}) }}">Advice</a>
+            <div class="card-footer">
+                <div class="pull-left">
+                    {% if app.user|isLoud(shout) %}
+                        <span class="btn btn-primary btn-sm btn-loud" data-id="{{ slug }}" data-is-loud="true"><i class="fa fa-heart"></i>Loud</span>
+                    {% else %}
+                        <span class="btn btn-outline-primary btn-sm btn-loud" data-id="{{ slug }}" data-is-loud="false"><i class="fa fa-bullhorn" title="loud this"></i> Loud</span>
+                    {% endif %}
+
+                    {% if app.user|isLove(shout) %}
+                        <span class="btn btn-danger btn-sm btn-love" data-id="{{ slug }}" data-is-love="true"><i class="fa fa-heart"></i>Love</span>
+                    {% else %}
+                        <span class="btn btn-outline-danger btn-sm btn-love" data-id="{{ slug }}" data-is-love="false"><i class="fa fa-heart" title="love this"></i> Love</span>
+                    {% endif %}
+                </div>
+                <div class="pull-right">
+                    <a class="btn btn-outline-primary btn-round" href="{{ path('shout_show', {slug: slug}) }}">Advice</a>
+                </div>
             </div>
         </div>
     </div>
