initial landing page

--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -14,7 +14,7 @@
         </div>
     </nav>
     <div class="wrapper">
-        <div class="page-header" style="background-image: url('{{ asset('assets/img/login-image.jpg') }}');">
+        <div class="page-header" style="background-image: url('{{ asset('assets/img/jordan-hile-26497.jpg') }}');">
             <div class="filter"></div>
             <div class="container">
                 <div class="row">
@@ -26,7 +26,7 @@
                             {% form_theme form 'bootstrap_3_layout.html.twig' %}
                             {{ form_start(form) }}
                             {{ form_widget(form) }}
-                                <button type="submit" class="btn btn-danger btn-block btn-round">Register</button>
+                                <button type="submit" class="btn btn-danger btn-block btn-round">Sign up</button>
                             {{ form_end(form) }}
                         </div>
                     </div>
