--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -14,7 +14,7 @@
         </div>
     </nav>
     <div class="wrapper">
-        <div class="page-header" style="background-image: url('{{ asset('assets/img/login-image.jpg') }}');">
+        <div class="page-header" style="background-image: url('{{ asset('assets/img/jordan-hile-26497.jpg') }}');">
             <div class="filter"></div>
             <div class="container">
                 <div class="row">
@@ -51,7 +51,7 @@
                                 <input type="password" class="form-control" id="password" name="_password" placeholder="Password">
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                                 <button type="submit" class="btn btn-danger btn-block btn-round">Login</button>
-                                <a href="{{ path('registration') }}" class="btn btn-default btn-block btn-round mt-2">Register</a>
+                                <a href="{{ path('registration') }}" class="btn btn-default btn-block btn-round mt-2">Sign up</a>
                             </form>
                             <div class="forgot">
                                 <a href="#" class="btn btn-link btn-danger">Forgot password?</a>
