--- a/app/Resources/views/layouts/navbar.html.twig
+++ b/app/Resources/views/layouts/navbar.html.twig
@@ -9,7 +9,7 @@
         <a class="navbar-brand" href="{{ path('shout_list') }}">Shout!</a>
         <div class="collapse navbar-collapse" id="navbar-danger">
             <div class="col-md-8">
-                <form class="mt-3" action="" method="post" role="form">
+                <form class="mt-3" method="get" role="form">
                     <div class="input-group">
                         <input type="text" class="form-control bg-danger" name="search" placeholder="Search Shoutee" style="border-color: white; color: white">
                         <button type="submit" class="input-group-addon bg-danger text-white" style="border-color: white">
