--- a/app/Resources/views/profile/show.html.twig
+++ b/app/Resources/views/profile/show.html.twig
@@ -45,47 +45,8 @@
                     <div class="tab-pane active" id="follows" role="tabpanel">
                         <div class="row">
                             <div class="col-md-6 offset-md-3">
-                                <div class="text-center"><button class="btn btn-warning btn-round"><i
-                                                class="fa fa-plus"></i> Review</button></div>
-                                <ul class="list-unstyled follows">
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-md-2 offset-md-0">
-                                                <img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                            </div>
-                                            <div class="col-md-7 col-xs-4">
-                                                <h6>Flume<br/><small>Masyadong siyang fogi</small></h6>
-                                            </div>
-                                            {#<div class="col-md-3 col-xs-2">#}
-                                                {#<div class="unfollow" >#}
-                                                    {#<div class="checkbox">#}
-                                                        {#<input id="checkbox1" type="checkbox" checked="">#}
-                                                        {#<label for="checkbox1"></label>#}
-                                                    {#</div>#}
-                                                {#</div>#}
-                                            {#</div>#}
-                                        </div>
-                                    </li>
-                                    <hr />
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-md-2 offset-md-0">
-                                                <img src="../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                            </div>
-                                            <div class="col-md-7 col-xs-4">
-                                                <h6>Banks<br /><small>Paaweer!</small></h6>
-                                            </div>
-                                            {#<div class="col-md-3 col-xs-2">#}
-                                                {#<div class="unfollow" >#}
-                                                    {#<div class="checkbox">#}
-                                                        {#<input id="checkbox2" type="checkbox" checked="">#}
-                                                        {#<label for="checkbox2"></label>#}
-                                                    {#</div>#}
-                                                {#</div>#}
-                                            {#</div>#}
-                                        </div>
-                                    </li>
-                                </ul>
+                                {# REVIEWS #}
+                                {% include 'profile/_reviews.html.twig' %}
                             </div>
                         </div>
                     </div>
