--- a/src/AdminBundle/Resources/views/User/list.html.twig
+++ b/src/AdminBundle/Resources/views/User/list.html.twig
@@ -11,12 +11,12 @@
                             <div class="header">
                                 <h4 class="title">Users </h4>
                                 <p class="category">List of users</p>
-                                <div class="pull-right"><button class="btn btn-success" >+Add Administrator</button>
+                                <div class="pull-right"><a href="{{path('admin_index')}}"><button class="btn btn-success">Add Administrator +</a></button>
                                 
                             </div>
                             <div class="content table-responsive table-full-width">
                                 <table class="table table-striped">
-                                    <thead>
+                                    <thead align="center">
                                         <th>ID</th>
                                         <th>Username</th>
                                         <th>Email</th>
@@ -26,12 +26,12 @@
                                         <th>Lastname</th>
                                         <th>Birthdate</th>
                                         <th>Gender</th>
-                                        <th>Avatar</th>
-                                        <th>Bio</th>
+                                        <th>Action</th>
+
                                     </thead>
                                     <tbody>
                                         {% for user in users %}
-                                        	<tr>
+                                        	<tr align="center">
                                             <td>{{user.id}}</td>
                                             <td>{{user.username}}</td>
                                             <td>{{user.email}}</td>
@@ -41,20 +41,21 @@
                                             <td>{{user.lastName}}</td>
                                             <td>{{user.dob|date('M d, Y')}}</td>
                                             <td>{{user.gender}}</td>
-                                            <td>{{user.avatar}}</td>
-                                            <td>{{user.about}}</td>
+                                            <td><button class="btn btn-info" data-toggle="modal" data-target="#myModal"> <span class="ti-pencil"></span></button>
+
+                                            <button class="btn btn-danger"> 
+                                            <span class="ti-trash"></span></button>
+
+                                            </td>
+                
                                         </tr>
       
                                          {% endfor %}                                
                                     </tbody>
                                 </table>
-
                             </div>
                         </div>
                     </div>
-
-
-
 
 {% endblock %}
 
